tests/errors/mask_not_logical.f90
program main
    print *, sum([1, 2, 3], mask = [1, 2, 3])
end program